--- a/.env
+++ b/.env
@@ -9,6 +9,11 @@ MQTT_USE_TLS=True
 TORNELLO_ID=tornello_01
 DIREZIONE=in
 
+# Configurazione Autenticazione
+AUTH_ENABLED=True
+AUTH_TIMEOUT=5
+AUTH_TOPIC_SUFFIX=auth_response
+
 # Configurazione Relè
 RELAY_PIN=18
 RELAY_ACTIVE_TIME=2
