--- a/.env
+++ b/.env
@@ -18,7 +18,14 @@ AUTH_TOPIC_SUFFIX=auth_response
 RELAY_PIN=18
 RELAY_ACTIVE_TIME=2
 RELAY_ACTIVE_LOW=False
+RELAY_INITIAL_STATE=LOW
 
 # Configurazione RFID
 RFID_RST_PIN=22
 RFID_SDA_PIN=8
+
+# Configurazione Logging
+LOG_DIRECTORY=logs
+LOG_LEVEL=INFO
+LOG_RETENTION_DAYS=30
+ENABLE_CONSOLE_LOG=False
