--- a/.env
+++ b/.env
@@ -17,8 +17,8 @@ AUTH_TOPIC_SUFFIX=auth_response
 # Configurazione Relè
 RELAY_PIN=18
 RELAY_ACTIVE_TIME=2
-RELAY_ACTIVE_LOW=False
-RELAY_INITIAL_STATE=LOW
+RELAY_ACTIVE_LOW=True
+RELAY_INITIAL_STATE=HIGH
 
 # Configurazione RFID
 RFID_RST_PIN=22
