--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ AUTH_TOPIC_SUFFIX=auth_response
 # Configurazione Relè
 RELAY_PIN=18
 RELAY_ACTIVE_TIME=2
-RELAY_ACTIVE_LOW=True
+RELAY_ACTIVE_LOW=False
 RELAY_INITIAL_STATE=HIGH
 
 # Configurazione RFID
