--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ AUTH_TOPIC_SUFFIX=auth_response
 RELAY_PIN=18
 RELAY_ACTIVE_TIME=2
 RELAY_ACTIVE_LOW=True
-RELAY_INITIAL_STATE=HIGH
+RELAY_INITIAL_STATE=LOW
 
 # Configurazione RFID
 RFID_RST_PIN=22
