add multidirectional function

--- a/.env
+++ b/.env
@@ -7,22 +7,40 @@ MQTT_USE_TLS=True
 
 # Configurazione Tornello
 TORNELLO_ID=tornello_01
-DIREZIONE=in
+
+# Configurazione Sistema Bidirezionale
+BIDIRECTIONAL_MODE=False
+ENABLE_IN_READER=True
+ENABLE_OUT_READER=False
+
+# Configurazione RFID Reader IN
+RFID_IN_RST_PIN=22
+RFID_IN_SDA_PIN=8
+RFID_IN_ENABLE=True
+
+# Configurazione RFID Reader OUT (opzionale)
+RFID_OUT_RST_PIN=25
+RFID_OUT_SDA_PIN=7
+RFID_OUT_ENABLE=False
+
+# Configurazione Relè Canale IN
+RELAY_IN_PIN=18
+RELAY_IN_ACTIVE_TIME=2
+RELAY_IN_ACTIVE_LOW=True
+RELAY_IN_INITIAL_STATE=LOW
+RELAY_IN_ENABLE=True
+
+# Configurazione Relè Canale OUT (opzionale)
+RELAY_OUT_PIN=19
+RELAY_OUT_ACTIVE_TIME=2
+RELAY_OUT_ACTIVE_LOW=True
+RELAY_OUT_INITIAL_STATE=LOW
+RELAY_OUT_ENABLE=False
 
 # Configurazione Autenticazione
 AUTH_ENABLED=True
 AUTH_TIMEOUT=5
 AUTH_TOPIC_SUFFIX=auth_response
-
-# Configurazione Relè
-RELAY_PIN=18
-RELAY_ACTIVE_TIME=2
-RELAY_ACTIVE_LOW=True
-RELAY_INITIAL_STATE=LOW
-
-# Configurazione RFID
-RFID_RST_PIN=22
-RFID_SDA_PIN=8
 
 # Configurazione Logging
 LOG_DIRECTORY=logs
