add offline fallback functionality

--- a/.env
+++ b/.env
@@ -42,6 +42,15 @@ AUTH_ENABLED=True
 AUTH_TIMEOUT=5
 AUTH_TOPIC_SUFFIX=auth_response
 
+# Configurazione Fallback Offline
+OFFLINE_MODE_ENABLED=True
+OFFLINE_ALLOW_ACCESS=True
+OFFLINE_SYNC_ENABLED=False
+OFFLINE_STORAGE_FILE=offline_queue.json
+OFFLINE_MAX_QUEUE_SIZE=1000
+CONNECTION_CHECK_INTERVAL=30
+CONNECTION_RETRY_ATTEMPTS=3
+
 # Configurazione Logging
 LOG_DIRECTORY=logs
 LOG_LEVEL=INFO
