add manual control

--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ MQTT_USE_TLS=True
 TORNELLO_ID=tornello_01
 
 # Configurazione Sistema Bidirezionale
-BIDIRECTIONAL_MODE=False
+BIDIRECTIONAL_MODE=True
 ENABLE_IN_READER=True
-ENABLE_OUT_READER=False
+ENABLE_OUT_READER=True
 
 # Configurazione RFID Reader IN
 RFID_IN_RST_PIN=22
@@ -42,10 +42,17 @@ AUTH_ENABLED=True
 AUTH_TIMEOUT=5
 AUTH_TOPIC_SUFFIX=auth_response
 
+# Configurazione Apertura Manuale
+MANUAL_OPEN_ENABLED=True
+MANUAL_OPEN_TOPIC_SUFFIX=manual_open
+MANUAL_OPEN_RESPONSE_TOPIC_SUFFIX=manual_response
+MANUAL_OPEN_TIMEOUT=10
+MANUAL_OPEN_AUTH_REQUIRED=True
+
 # Configurazione Fallback Offline
 OFFLINE_MODE_ENABLED=True
 OFFLINE_ALLOW_ACCESS=True
-OFFLINE_SYNC_ENABLED=False
+OFFLINE_SYNC_ENABLED=True
 OFFLINE_STORAGE_FILE=offline_queue.json
 OFFLINE_MAX_QUEUE_SIZE=1000
 CONNECTION_CHECK_INTERVAL=30
