--- a/.env
+++ b/.env
@@ -63,3 +63,6 @@ LOG_DIRECTORY=logs
 LOG_LEVEL=INFO
 LOG_RETENTION_DAYS=30
 ENABLE_CONSOLE_LOG=False
+
+# Configurazione RFID Debounce (NUOVO - per evitare letture multiple)
+RFID_DEBOUNCE_TIME=2.0
