forse adesso il relè dovrebbe funzionare correttamente

--- a/.env
+++ b/.env
@@ -23,18 +23,18 @@ RFID_OUT_RST_PIN=25
 RFID_OUT_SDA_PIN=7
 RFID_OUT_ENABLE=False
 
-# Configurazione Relè Canale IN
+# Configurazione Relè Canale IN - CORRETTO PER ACTIVE LOW
 RELAY_IN_PIN=18
 RELAY_IN_ACTIVE_TIME=2
 RELAY_IN_ACTIVE_LOW=True
-RELAY_IN_INITIAL_STATE=LOW
+RELAY_IN_INITIAL_STATE=HIGH
 RELAY_IN_ENABLE=True
 
 # Configurazione Relè Canale OUT (opzionale)
 RELAY_OUT_PIN=19
 RELAY_OUT_ACTIVE_TIME=2
 RELAY_OUT_ACTIVE_LOW=True
-RELAY_OUT_INITIAL_STATE=LOW
+RELAY_OUT_INITIAL_STATE=HIGH
 RELAY_OUT_ENABLE=False
 
 # Configurazione Autenticazione
@@ -64,5 +64,5 @@ LOG_LEVEL=INFO
 LOG_RETENTION_DAYS=30
 ENABLE_CONSOLE_LOG=False
 
-# Configurazione RFID Debounce (NUOVO - per evitare letture multiple)
+# Configurazione RFID Debounce (per evitare letture multiple)
 RFID_DEBOUNCE_TIME=2.0
