aggiornato .end per uid a 8 caratteri e aggiunto script di disintallazione

--- a/.env
+++ b/.env
@@ -66,3 +66,7 @@ ENABLE_CONSOLE_LOG=False
 
 # Configurazione RFID Debounce (per evitare letture multiple)
 RFID_DEBOUNCE_TIME=2.0
+
+UID_FORMAT_MODE=compatible
+UID_LENGTH=8
+UID_DEBUG_MODE=True
