Fix card uid compatibility

--- a/config/examples/bidirezionale.env
+++ b/config/examples/bidirezionale.env
@@ -12,3 +12,7 @@ RELAY_IN_PIN=18
 RELAY_IN_ENABLE=True
 RELAY_OUT_PIN=19
 RELAY_OUT_ENABLE=True
+
+# Configurazione UID personalizzata
+UID_FORMAT_MODE=remove_suffix
+UID_CHARS_COUNT=2
