--- a/config/.env.example
+++ b/config/.env.example
@@ -67,6 +67,21 @@ ENABLE_CONSOLE_LOG=False
 # RFID Debounce
 RFID_DEBOUNCE_TIME=2.0
 
-UID_FORMAT_MODE=compatible
-UID_LENGTH=8
+# ===========================================
+# 🔧 CONFIGURAZIONE FORMATO UID CARD
+# ===========================================
+# Modalità formato UID:
+# - 'remove_suffix': Rimuove N caratteri dalla fine (es. C67BD90561 → C67BD905)
+# - 'truncate': Prende primi N caratteri (es. C67BD90561 → C67BD905)
+# - 'take_last': Prende ultimi N caratteri
+# - 'fixed_length': Padding/truncate a lunghezza fissa
+UID_FORMAT_MODE=remove_suffix
+
+# Numero caratteri da rimuovere/prendere (dipende da modalità)
+UID_CHARS_COUNT=2
+
+# Lunghezza finale desiderata (per fixed_length mode)
+UID_TARGET_LENGTH=8
+
+# Debug: mostra conversioni UID nei log
 UID_DEBUG_MODE=True
