--- a/config/examples/unidirezionale.env
+++ b/config/examples/unidirezionale.env
@@ -9,3 +9,7 @@ RFID_OUT_ENABLE=False
 RELAY_IN_PIN=18
 RELAY_IN_ENABLE=True
 RELAY_OUT_ENABLE=False
+
+# Configurazione UID personalizzata
+UID_FORMAT_MODE=remove_suffix
+UID_CHARS_COUNT=2
