Fix offline mode

--- a/config/examples/bidirezionale.env
+++ b/config/examples/bidirezionale.env
@@ -16,3 +16,8 @@ RELAY_OUT_ENABLE=True
 # Configurazione UID personalizzata
 UID_FORMAT_MODE=remove_suffix
 UID_CHARS_COUNT=2
+
+# Configurazione offline ottimale
+OFFLINE_MODE_ENABLED=True
+OFFLINE_ALLOW_ACCESS=True
+OFFLINE_SYNC_ENABLED=True
