--- a/.env
+++ b/.env
@@ -67,6 +67,7 @@ ENABLE_CONSOLE_LOG=False
 # Configurazione RFID Debounce (per evitare letture multiple)
 RFID_DEBOUNCE_TIME=2.0
 
-UID_FORMAT_MODE=compatible
-UID_LENGTH=8
+UID_FORMAT_MODE=remove_suffix
+UID_CHARS_COUNT=2
+UID_TARGET_LENGTH=8
 UID_DEBUG_MODE=True
